Add main configuration files and secure environment setup

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-# Environment Variables for AgriAssist
-# Copy this file to .env and fill in your actual API keys
-
-# Tavily AI API Key
-# Get your API key from: https://tavily.com
+# Tavily AI API Configuration
+# Get your API key from: https://tavily.com/
 REACT_APP_TAVILY_API_KEY=your_tavily_api_key_here
 
-# Optional: Other API keys for future integrations
+# Optional: Other AI service API keys
 # REACT_APP_OPENAI_API_KEY=your_openai_api_key_here
 # REACT_APP_AWS_ACCESS_KEY_ID=your_aws_access_key_here
+# REACT_APP_AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
